--- a/client/src/sass/1-global/_base.scss
+++ b/client/src/sass/1-global/_base.scss
@@ -13,7 +13,7 @@
   overflow-x: hidden;
   color: $black;
   font-size: 16px;
-  font-family: circe, sans-serif;
+  font-family: 'Circe', sans-serif;
 
   @include onLoadTransition;
 
@@ -53,7 +53,9 @@ ul {
 .btn {
   display: inline-block;
   margin: auto;
+  font-family: 'Circe', sans-serif;
   font-size: 1.5em;
+  font-weight: normal;
   text-transform: uppercase;
   letter-spacing: 1px;
   text-align: center;
@@ -100,7 +102,7 @@ section {
 
     h2,
     h3 {
-      font-weight: bold;
+      font-weight: 700;
       letter-spacing: 1px;
       margin: 0 0 1rem 2rem;
     }
@@ -200,7 +202,7 @@ section {
   span {
     margin: 1rem 0;
     font-size: 2em;
-    font-weight: 300;
+    font-weight: normal;
     font-style: italic;
     line-height: 1em;
     letter-spacing: 1px;
