--- a/client/src/sass/2-layouts/_main.scss
+++ b/client/src/sass/2-layouts/_main.scss
@@ -79,7 +79,7 @@
 
   p {
     font-size: 1.5em;
-    font-weight: 300;
+    font-weight: 100;
     padding: 1rem 0;
   }
 
@@ -140,7 +140,7 @@
 
       span {
         font-size: 2em;
-        font-weight: bold;
+        font-weight: 800;
       }
 
       ul {
@@ -151,6 +151,7 @@
 
         li {
           cursor: pointer;
+          font-weight: normal;
 
           &:hover {
             color: $green;
