--- a/client/src/sass/2-layouts/_sales.scss
+++ b/client/src/sass/2-layouts/_sales.scss
@@ -25,7 +25,7 @@
   }
 
   .sale-banner {
-    max-width: 72rem;
+    width: 100%;
     height: 20rem;
     border-radius: 1.25rem;
     overflow: hidden;
@@ -59,6 +59,10 @@
     span {
       font-size: 2em;
       font-weight: bold;
+
+      @include mobileL {
+        font-size: 2em !important;
+      }
     }
 
     p {
@@ -128,6 +132,7 @@
 
       .product-img {
         margin: auto;
+        width: 100%;
 
         img {
           width: 100%;
