--- a/client/src/sass/2-layouts/_work.scss
+++ b/client/src/sass/2-layouts/_work.scss
@@ -12,9 +12,8 @@
 
   .work-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
     grid-gap: 3rem;
-    width: 100%;
 
     .vacancy-preview {
       display: flex;
@@ -35,13 +34,6 @@
         line-height: 1.5rem;
         color: $gray;
       }
-    }
-
-    @include laptop {
-      grid-template-columns: 1fr 1fr;
-    }
-    @include tabletM {
-      grid-template-columns: 1fr;
     }
   }
 }
