--- a/client/src/sass/style.scss
+++ b/client/src/sass/style.scss
@@ -1,6 +1,7 @@
 // Sedam Market style
 
 // global
+@import '1-global/font';
 @import '1-global/variables';
 @import '1-global/mixins';
 @import '1-global/base';
